$Id: CHANGES,v 1.62 2000/06/01 20:49:32 stelian Exp $

Changes between versions 0.4b16 and 0.4b17 (released June 1st, 2000)
====================================================================

1.	The -F script is called now *only* at the end of a tape,
	not at the end of the dump. Thanks to Christian Haul
	<haul@informatik.tu-darmstadt.de> for the bug report.

	Normally, the device name and the current volume number
	are passed on the command line of the script. However,
	if you want the old style script (with no arguments
	passed on the command line), you can enable it in
	configure with the --enable-oldstylefscript.

2.	Use posix signal handling to preserve dump functionality 
	with libc5. Thanks to Jeff Johnson <jbj@redhat.com> for
	the patch.

3.	Made the exit code of restore in case of a 'C'ompare
	command reflect the result of the compare. An exit status
	of 0 means the dump archive is correct, 1 means tape errors,
	2 means that some files were modified. Thanks to Kenneth Porter
	<shiva@well.com> for the suggestion.

4.	Made (finally) quotes work in interactive restore.

5.	Small fixes in order to allow dump to compile with a 
	really old e2fsprogs version. Thanks to Ian Zimmerman 
	<itz@speakeasy.org> for the bug report.

6.	Add GNU readline capabilities to interactive restore.
	Use configure's --enable-readline flag to enable this feature.
	Thanks to Patrik Schindler <poc@pocnet.net> for the
	suggestion.

7.	Do the compare on the fly in restore 'C' mode (this will
	allow not to exhaust the available /tmp space when 
	ccmparing large files). Thanks to Kenneth Porter
	<shiva@well.com> for the suggestion.

Changes between versions 0.4b15 and 0.4b16 (released March 11, 2000)
====================================================================

1.	Fixed some several duplicate 'DUMP: DUMP:' in the
	output of dump.

2.	Corrected the estimation of blocks to dump. Note that
	this is still wrong for large directory inodes, due